--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Govindvr/project-manager-cet#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
