--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/Govindvr/project-manager-cet#readme",
   "dependencies": {
+    "aws-sdk": "^2.1381.0",
+    "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0"
   }
