--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "aws-sdk": "^2.1381.0",
     "cloudinary": "^1.37.0",
+    "concurrently": "^8.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0"
   }
