--- a/ml_api/requirements.txt
+++ b/ml_api/requirements.txt
@@ -4,6 +4,21 @@ Flask==2.3.2
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
 MarkupSafe==2.1.3
+nltk==3.8.1
+numpy==1.24.3
+pandas==2.0.2
+PyPDF2==3.0.1
+python-dateutil==2.8.2
+pytz==2023.3
+regex==2023.6.3
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+threadpoolctl==3.1.0
+tqdm==4.65.0
+typing_extensions==4.6.3
+tzdata==2023.3
 Werkzeug==2.3.4
 zipp==3.15.0
