--- a/ml_api/requirements.txt
+++ b/ml_api/requirements.txt
@@ -1,8 +1,19 @@
 blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.3.2
 Flask-Cors==3.0.10
+google-api-core==2.11.1
+google-api-python-client==2.90.0
+google-auth==2.21.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.1
 gunicorn==20.1.0
+httplib2==0.22.0
+idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -10,11 +21,20 @@ joblib==1.2.0
 MarkupSafe==2.1.3
 nltk==3.8.1
 numpy==1.24.3
+oauthlib==3.2.2
 pandas==2.0.2
+protobuf==4.23.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyparsing==3.1.0
 PyPDF2==3.0.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 regex==2023.6.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
@@ -22,5 +42,7 @@ threadpoolctl==3.1.0
 tqdm==4.65.0
 typing_extensions==4.6.3
 tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
 Werkzeug==2.3.4
 zipp==3.15.0
