--- a/ml_api/requirements.txt
+++ b/ml_api/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==9.0.1
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
@@ -5,6 +6,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.3.2
 Flask-Cors==3.0.10
+Flask-RESTful==0.3.10
 google-api-core==2.11.1
 google-api-python-client==2.90.0
 google-auth==2.21.0
