--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "sheetjs": "^2.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
